@@ -15,6 +15,7 @@ Bugs fixed:
 - 2591758 EOF Exception when running DefineSystem
 - 2688353 Unnecessary condition in providerMgr.c
 - 2692030 sfcb's SLP client should use LocalConnect interface
+- 2141249 WQL parser needs to suppor the LIKE syntax
 
 Changes in 1.3.3
 ================
